# Resume_Parser

./: .env.local  .gitignore  Procfile  README.md  SYSTEM_OVERVIEW.md  deploy-free.bat  deploy-free.sh  deploy-railway.js  env.example  index.html  package-lock.json  package.json  railway.json  setup.bat  setup.sh  start-railway.js
ai_service/: job_recommendations.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_main.py  utils.py
backend/: app.js  build.js  package-lock.json  package.json  server.js  startup.js  test-server.js
backend/controllers/: analysisController.js  jobRecommendationsController.js  resumeController.js
backend/models/: Analysis.js  Resume.js
backend/routes/: analysis.js  jobs.js  resume.js
backend/services/: aiService.js  jobScraper.js
src/: App.tsx
src/components/: DetailedAnalysis.tsx  JobInfo.tsx
src/lib/: supabase.ts
src/pages/: Auth-HPvictus.tsx  Auth.tsx  Dashboard-HPvictus.tsx  Dashboard.tsx  Index.tsx  JobRecommendations.tsx
