[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunt-ai-service"
version = "1.0.0"
description = "AI service for resume-job matching analysis"
authors = [
    {name = "Job Hunt Insights Engine", email = "info@jobhuntinsights.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "spacy>=3.5.0",
    "scikit-learn>=1.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    "requests>=2.28.0",
    "sentence-transformers>=2.2.0",
    "nltk>=3.8.0",
    "jinja2>=3.1.0",
    "markdown>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pyright>=1.1.0"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["job_hunt_ai"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.pyright]
include = ["."]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "**/venv",
    "**/env",
    "**/.venv"
]
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnusedFunction = "warning"
reportUnusedClass = "warning"
reportDuplicateImport = "error"
reportUndefinedVariable = "error"
reportUnboundVariable = "error"
reportInvalidStringEscapeSequence = "warning"
reportMissingParameterType = "warning"
reportMissingReturnType = "warning"
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportMissingTypeArgument = "warning"
reportInvalidTypeVarUse = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportUnreachable = "warning"
reportShadowedImports = "warning"
reportImplicitOverride = "warning"
reportAny = "warning"
reportExplicitAny = "warning"
reportUnusedParameter = "hint"
reportUnusedExcept = "hint"
pythonVersion = "3.8"
pythonPlatform = "Windows"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoImportCompletions = true
indexing = true
logTypeEvaluationTime = false
verboseOutput = false 